[package]
name = "growing_squid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cucumber = "0.14.2"
tokio = { version = "1.21.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
chrono = "0.4"
sha2 = "0.10.6"
hmac = "0.12.1"
httpmock = "0.6"
base64 = "0.13"
indexmap = "1.9.1"


[[test]]
name = "growing_squid"
harness = false

